--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
   bionic:
     << : *linux
     hostname: bionic
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic-5.12.5_1.13.1-1
     build:
       dockerfile: docker/bionic/Dockerfile
       context: .
       args:
-        QT_VERSION: 5.12.4
+        QT_VERSION: 5.12.5
         QTCREATOR_VERSION: 4.9.2
 
   stretch:
