Export the GLIB switch properly
The GLIB event dispatcher was disabled in order to work around
QTBUG-79020. But the environment variable was not exported properly
and hence, the work-around had no effect.

Change-Id: I9bad99168456ae734c895db0ed4f46885d6b4d48
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/bionic/Dockerfile
+++ b/docker/bionic/Dockerfile
@@ -180,4 +180,4 @@ RUN qbs-setup-toolchains /usr/bin/g++ gcc && \
 USER root
 
 # Work-around for QTBUG-79020
-RUN echo "QT_NO_GLIB=1" >> /etc/profile.d/qt.sh
+RUN echo "export QT_NO_GLIB=1" >> /etc/profile.d/qt.sh
