Enable cpp.treatWarningsAsErrors when building Qbs on Travis
Change-Id: I45a6bbc31a5be8c20b0fe7877e1fc42833e68ddd
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
     - <<: *build-on-bionic
       name: With Qbs on Ubuntu bionic (mingw32_w64)
       script:
-        - docker-compose run --rm ${SERVICE} qbs build profile:qt-mingw32_w64
+        - docker-compose run --rm ${SERVICE} qbs build profile:qt-mingw32_w64 modules.cpp.treatWarningsAsErrors:true
 
     - &build-on-macos
       stage: Build Qbs and and run autotests
