Enable ccache on macOS
Cold Cache: 27:47 (XCode 10.2) /  31:08 (XCode 11.0)

Warm Cache: 22:53 (XCode 10.2) / 24:20 (XCode 11.0)

Change-Id: I68449a1b921a63d1102c58255a6badb3098b4170
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
 # DOCKER_USERNAME
 #
 language: cpp
+cache: ccache
 
 git:
   submodules: false
@@ -50,11 +51,12 @@ jobs:
         homebrew:
           packages:
             - p7zip
+            - ccache
           update: true
       env:
         # Address sanitizer slows autotests down too much.
         # We would hit the maximum build time on Travis.
-        BUILD_OPTIONS=modules.qbsbuildconfig.enableAddressSanitizer:false
+        BUILD_OPTIONS="modules.qbsbuildconfig.enableAddressSanitizer:false modules.cpp.compilerWrapper:ccache"
         QMAKE_PATH=${QT_INSTALL_DIR}/${QT_VERSION}/clang_64/bin/qmake
         PATH="${QT_INSTALL_DIR}/Qt Creator.app/Contents/MacOS:${PATH}"
         QBS_BUILD_PROFILE=qt
@@ -63,11 +65,13 @@ jobs:
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QTCREATOR_VERSION} qtcreator
         - pip2 install --user beautifulsoup4 lxml
       script:
+        - ccache -s
         - qbs setup-toolchains --detect
         - qbs setup-qt ${QMAKE_PATH} qt
         - qbs config qt.baseProfile xcode-macosx-x86_64
         - qbs config defaultProfile qt
         - scripts/build-qbs-with-qbs.sh
+        - ccache -s
 
     - <<: *build-on-macos
       name: With Qbs on macOS (xcode 11)
