Enable clang-tidy job on Travis
This runs predefined clang-tidy checks on the QBS sources, excluding
examples and tests

Most checks are displayed as warings, however, some checks are treated
as errors to avoid adding regressions in the new code

clang-analyzer-* checks are not enabled due to performance reasons
(otherwise, Travis job hits 50 min)

Change-Id: I686003d2526a11d90fc74c88104b4357d67620d1
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,15 @@ jobs:
       script:
         - docker-compose run bionic qbs build ${BUILD_OPTIONS}
 
+    - <<: *build-on-bionic
+      name: With Qbs on Ubuntu bionic (linux_clang64 & clang_tidy)
+      env:
+        BUILD_OPTIONS="profile:qt-clang_64 modules.cpp.compilerWrapper:ccache"
+      services:
+        - docker
+      script:
+        - docker-compose run --rm bionic scripts/run-analyzer.sh
+
     - &build-on-macos
       stage: Build Qbs and and run autotests
       name: With Qbs on macOS (xcode 10.3)
