--- a/docker/bionic/Dockerfile
+++ b/docker/bionic/Dockerfile
@@ -124,7 +124,9 @@ RUN apt-get update -qq && \
         ccache \
         curl \
         git \
-        libclang-3.9 \
+        libclang-3.9-dev \
+        clang-8 \
+        clang-tidy-8 \
         libdbus-1-3 \
         libfreetype6 \
         libfontconfig1 \
@@ -134,9 +136,11 @@ RUN apt-get update -qq && \
         help2man \
         python-pip \
         p7zip-full && \
+    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-8 100 && \
+    update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-8 100 && \
     pip install beautifulsoup4 lxml # for building the documentation
 
-ENV LLVM_INSTALL_DIR=/usr/lib/llvm-3.9
+ENV LLVM_INSTALL_DIR=/usr/lib/llvm-8
 
 
 #
@@ -169,8 +173,11 @@ RUN apt-get install -qq -y --no-install-recommends \
 # Configure Qbs
 USER $USER_NAME
 RUN qbs-setup-toolchains /usr/bin/g++ gcc && \
+    qbs-setup-toolchains /usr/bin/clang clang && \
     qbs-setup-qt /opt/Qt/${QT_VERSION}/gcc_64/bin/qmake qt-gcc_64 && \
     qbs config profiles.qt-gcc_64.baseProfile gcc && \
+    qbs-setup-qt /opt/Qt/${QT_VERSION}/gcc_64/bin/qmake qt-clang_64 && \
+    qbs config profiles.qt-clang_64.baseProfile clang && \
     qbs config defaultProfile qt-gcc_64 && \
     \
     qbs-setup-toolchains /usr/bin/x86_64-w64-mingw32-g++ mingw && \
