--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ jobs:
         BUILD_OPTIONS="config:release modules.cpp.compilerWrapper:clcache"
         QT_INSTALL_DIR=C:/Qt
         QMAKE_PATH=${QT_INSTALL_DIR}/${QT_VERSION}/msvc2017_64/bin/qmake.exe
-        PATH="/c/Qt/Tools/QtCreator/bin:/c/Python36:/c/Python36/Scripts:${PATH}"
+        PATH="/c/Qt/Tools/QtCreator/bin:/c/Python38:/c/Python39:/c/Python38/Scripts:/c/Python39/Scripts:${PATH}"
         WITH_DOCS=0
         QBS_BUILD_PROFILE=qt
         CLCACHE_DIR="${HOME}/.ccache"
@@ -111,7 +111,7 @@ jobs:
         # Install Qbs and Qt
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QT_VERSION} --toolchain win64_msvc2017_64 qtbase qtdeclarative qttools qtscript
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QTCREATOR_VERSION} qtcreator
-        - choco install python --version 3.6.8
+        - choco install python
         - pip install git+https://github.com/frerich/clcache.git@cae73d8255d78db8ba11e23c51fd2c9a89e7475b
       script:
         - clcache -s
