travis: Add XCode 9.4 job
This is still the default one on Travis and Qbs should support it

Also, only build XCode10 variant on master to avoid extra job for gerrit
builds

Change-Id: I100e7e4560aeca3c2c3d77d81ecc9097853e0a2d
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,9 +70,9 @@ jobs:
 
     - &build-on-macos
       stage: Build Qbs and and run autotests
-      name: With Qbs on macOS (xcode 10.3)
+      name: With Qbs on macOS (xcode 11.3)
       os: osx
-      osx_image: xcode10.3
+      osx_image: xcode11.3
       addons:
         homebrew:
           packages:
@@ -100,8 +100,13 @@ jobs:
         - ccache -s
 
     - <<: *build-on-macos
-      name: With Qbs on macOS (xcode 11.3)
-      osx_image: xcode11.3
+      name: With Qbs on macOS (xcode 10.3)
+      osx_image: xcode10.3
+      if: branch = master
+
+    - <<: *build-on-macos
+      name: With Qbs on macOS (xcode 9.4)
+      osx_image: xcode9.4
 
     - &build-on-windows
       stage: Build Qbs and and run autotests
