Do not override QT_INSTALL_DIR in the Travis Windows job
QT_INSTALL_DIR is defined as global environment variable and is overrideen with
a different value in the windows job. Something changed in the way Travis parses
environment variables and the override is exported after depend variables.

Since we run the build in a bash shell, there is no reason to set QT_INSTALL_DIR
to a different value than ~/Qt. We can safely remove the override.

Change-Id: Id556997b3a9d8a8d6be474485b5084955a09f253
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -115,9 +115,8 @@ jobs:
       env:
         # Need to build in release mode. Otherwise autotests would be too slow.
         BUILD_OPTIONS="config:release modules.cpp.compilerWrapper:clcache"
-        QT_INSTALL_DIR=C:/Qt
         QMAKE_PATH=${QT_INSTALL_DIR}/${QT_VERSION}/msvc2017_64/bin/qmake.exe
-        PATH="/c/Qt/Tools/QtCreator/bin:/c/Python38:/c/Python39:/c/Python38/Scripts:/c/Python39/Scripts:${PATH}"
+        PATH="${QT_INSTALL_DIR}/Tools/QtCreator/bin:/c/Python38:/c/Python39:/c/Python38/Scripts:/c/Python39/Scripts:${PATH}"
         WITH_DOCS=0
         QBS_BUILD_PROFILE=qt
         CLCACHE_DIR="${HOME}/.ccache"
