--- a/.travis.yml
+++ b/.travis.yml
@@ -134,6 +134,7 @@ jobs:
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QTCREATOR_VERSION} qtcreator
         - choco install python
         - pip install git+https://github.com/frerich/clcache.git@cae73d8255d78db8ba11e23c51fd2c9a89e7475b
+        - pip install conan
       before_script:
         - clcache -s
       after_script:
