--- a/.travis.yml
+++ b/.travis.yml
@@ -98,6 +98,7 @@ jobs:
         - qbs setup-qt ${QMAKE_PATH} qt
         - qbs config qt.baseProfile xcode-macosx-x86_64
         - qbs config defaultProfile qt
+        - qbs config --list profiles
         - scripts/build-qbs-with-qbs.sh
         - ccache -s
 
