Fix Qt base profile for Mac jobs
Some GCC tests were skipped on Mac because of the empty qbs.toolchain
value

Change-Id: I977eecad416ffd074f6e997c71da12c0a4ee8ace
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,7 @@ jobs:
         - ccache -s
         - qbs setup-toolchains --detect
         - qbs setup-qt ${QMAKE_PATH} qt
-        - qbs config qt.baseProfile xcode-macosx-x86_64
+        - qbs config profiles.qt.baseProfile xcode-macosx-x86_64
         - qbs config defaultProfile qt
         - qbs config --list profiles
         - scripts/build-qbs-with-qbs.sh
