Update windowsservercore Docker image
Qt is updated to 5.12.5, MSVC is updated to 2017. Qbs is updated to
1.15.0.
Docker-compose is used for managing the image. A unique tag name is used
instead of the generic windowsservercore tag to be always able to refer
to a specific version. Docker-compose is now used for managing the
image.

Change-Id: Ia5733992e7692561b1a6e74a4ac2ea3a7a01c4d8
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,20 @@ services:
       args:
         QT_VERSION: 5.12.4
         QTCREATOR_VERSION: 4.9.2
+
+  windows:
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:windowsservercore-5.12.7_1.15.0-0
+    build:
+      dockerfile: docker/windowsservercore/Dockerfile
+      context: .
+      args:
+        QT_VERSION: 5.12.7
+        QBS_VERSION: 1.15.0
+    working_dir: 'C:/qbs'
+    environment:
+      - BUILD_OPTIONS
+      - WITH_DOCS
+    volumes:
+      - .:C:\qbs
+      - ~/.ccache:C:\.ccache
+    network_mode: nat
