--- a/.travis.yml
+++ b/.travis.yml
@@ -116,6 +116,36 @@ jobs:
       osx_image: xcode9.4
       if: branch = master
 
+    - &build-on-windows-with-docker
+      stage: Build Qbs and and run autotests
+      name: With Qbs on Windows with Docker (Visual Studio 2017)
+      if: branch = master
+      os: windows
+      services: docker
+      env:
+        CLCACHE_DIR="${HOME}/.ccache"
+      before-install:
+        - curl -sLo "/c/Program Files/Docker/docker-compose.exe" https://github.com/docker/compose/releases/download/1.25.3/docker-compose-Windows-x86_64.exe
+        - docker-compose pull windows
+      before_script:
+        - docker-compose run --rm windows clcache -s
+      script:
+        - >
+          docker-compose run --rm windows qbs build
+          -p dist
+          qbs.buildVariant:release
+          modules.cpp.compilerWrapper:clcache
+          modules.qbsbuildconfig.enableBundledQt:true
+          modules.qbsbuildconfig.enableProjectFileUpdates:true
+          modules.qbsbuildconfig.enableUnitTests:true
+          modules.cpp.treatWarningsAsErrors:true
+          project.withDocumentation:true
+          project.withExamples:true
+          config:release-64 profile:qt64
+          config:release profile:qt
+      after_script:
+        - docker-compose run --rm windows clcache -s
+
     - &build-on-windows
       stage: Build Qbs and and run autotests
       name: With Qbs on Windows (Visual Studio 2017)
