Disable CI build with xcode-9
The job fails quite often. Build it only on master instead.

Change-Id: Ice52cb0eff51870ef49e97d961549ad92e46df44
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -114,6 +114,7 @@ jobs:
     - <<: *build-on-macos
       name: With Qbs on macOS (xcode 9.4)
       osx_image: xcode9.4
+      if: branch = master
 
     - &build-on-windows
       stage: Build Qbs and and run autotests
