Refactor MSBuild lib
This patch modernizes the msbuild lib by replacing
raw news with parent-child ownership with unique_ptr.

The reason is that tools like clang analyzer do not
understand the parent-child trees and  provide false
positives in the code.

This patch also introduces a check for an allowlist
of children types avalibble for a node. Previously,
this check was done implicitly via the type of parent
node.

Change-Id: Id5f589271711be1ca51ce42098132d20cd274cd4
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/msbuild/CMakeLists.txt
+++ b/src/lib/msbuild/CMakeLists.txt
@@ -13,8 +13,6 @@ set(SOLUTION_SOURCES
 list_transform_prepend(SOLUTION_SOURCES solution/)
 
 set(MSBUILD_SOURCES
-    imsbuildgroup.cpp
-    imsbuildgroup.h
     imsbuildnode.cpp
     imsbuildnode.h
     imsbuildnodevisitor.h
@@ -24,6 +22,8 @@ set(MSBUILD_SOURCES
     msbuildimportgroup.h
     msbuilditem.cpp
     msbuilditem.h
+    msbuilditemgroupbase.cpp
+    msbuilditemgroupbase.h
     msbuilditemdefinitiongroup.cpp
     msbuilditemdefinitiongroup.h
     msbuilditemgroup.cpp
