Install libgrpc++-dev packages in Bionic image
This enables autotesting the GRPC test in Travis (otherwise, headers are
missing and IncludeProbe fails to find them)

Change-Id: I77792a2c5dbfc3f73020b7964cca3274a5165c3c
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/bionic/Dockerfile
+++ b/docker/bionic/Dockerfile
@@ -137,6 +137,7 @@ RUN apt-get update -qq && \
         libgl1-mesa-dev \
         libgl1-mesa-glx \
         libprotobuf-dev \
+        libgrpc++-dev \
         nsis \
         pkg-config \
         protobuf-compiler \
