Enable coredumps on macOS
This patch enables backtraces in case a program crashes during the build/test.
We want to see the backtrace of Qbs when it crashes.

Change-Id: Ie90f805a68ca9b2d01644b25e81d4d60ab467d0c
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,8 @@ jobs:
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QT_VERSION} qtbase qtdeclarative qttools qtscript qtscxml
         - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version ${QTCREATOR_VERSION} qtcreator
         - pip3 install --user beautifulsoup4 lxml
+      before_script:
+        - ulimit -c unlimited -S       # enable core dumps
       script:
         - ccache -s
         - qbs setup-toolchains --detect
@@ -105,6 +107,13 @@ jobs:
         - qbs config --list profiles
         - scripts/build-qbs-with-qbs.sh
         - ccache -s
+      # Find core dump and print traceback on failure
+      after_failure:
+        - |
+          for f in $(find /cores -maxdepth 1 -name 'core.*' -print); do
+            lldb --core $f --batch --one-line "bt"
+          done;
+
 
     - <<: *build-on-macos
       name: With Qbs on macOS (xcode 10.3)
