Do not reinstall Qt if already installed
The server download.qt.io is frequently overloaded. Instead of
re-installing Qt every time, try to check if the desired packages are
already installed. Utilize Travis' caching meachanism for Qt
installations.

Change-Id: I4ff1c05b93fd1f0224a7ea4e4869998a21478bfc
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@
 # DOCKER_USERNAME
 #
 language: cpp
-cache: ccache
 
 git:
   submodules: false
@@ -14,6 +13,11 @@ env:
     - QT_INSTALL_DIR=~/Qt
     - QT_VERSION=5.12.6
     - QTCREATOR_VERSION=4.10.2
+
+cache:
+  directories:
+    - ${QT_INSTALL_DIR}
+    - ~/.ccache
 
 stages:
   - name: Build Qbs and and run autotests
