--- a/docker/windowsservercore/Dockerfile
+++ b/docker/windowsservercore/Dockerfile
@@ -6,17 +6,20 @@ LABEL Description="Windows Server Core development environment for Qbs with Qt, 
 RUN reg add "HKLM\SOFTWARE\Microsoft\Windows\Windows Error Reporting" /v Disabled /t REG_DWORD /d 1 /f
 RUN reg add "HKLM\SOFTWARE\Microsoft\Windows\Windows Error Reporting" /v DontShowUI /t REG_DWORD /d 1 /f
 
+# Install VS from the website since chocolatey has broken .NET 4.8 (dotnetfx package) which is a
+# dependency for the visualstudio2019buildtools package
 RUN powershell -NoProfile -ExecutionPolicy Bypass -Command \
-    $Env:chocolateyVersion = '0.10.8' ; \
+    Invoke-WebRequest "https://aka.ms/vs/16/release/vs_community.exe" \
+    -OutFile "%TEMP%\vs_community.exe" -UseBasicParsing
+
+RUN "%TEMP%\vs_community.exe"  --quiet --wait --norestart --noUpdateInstaller \
+    --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 \
+    --add Microsoft.VisualStudio.Component.Windows10SDK.18362
+
+RUN powershell -NoProfile -ExecutionPolicy Bypass -Command \
+    $Env:chocolateyVersion = '0.10.15' ; \
     $Env:chocolateyUseWindowsCompression = 'false' ; \
     "[Net.ServicePointManager]::SecurityProtocol = \"tls12, tls11, tls\"; iex ((New-Object System.Net.WebClient).DownloadString('http://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
-
-# Wait for vs_installer.exe, vs_installerservice.exe
-# or vs_installershell.exe because choco doesn't
-RUN powershell -NoProfile -InputFormat None -Command \
-    choco install visualcpp-build-tools --version 15.0.26228.20170424 -y; \
-    Write-Host 'Waiting for Visual C++ Build Tools to finish'; \
-    Wait-Process -Name vs_installer
 
 ARG QBS_VERSION
 RUN choco install -y python && \
@@ -39,11 +42,11 @@ RUN certutil -generateSSTFromWU roots.sst && \
 ARG QT_VERSION
 COPY scripts/install-qt.sh install-qt.sh
 
-RUN bash -c "./install-qt.sh -d /c/Qt --version ${QT_VERSION} --toolchain win64_msvc2017_64 qtbase qtdeclarative qttools qtscript"
-ENV QTDIR64=C:\\Qt\\${QT_VERSION}\\msvc2017_64
+RUN bash -c "./install-qt.sh -d /c/Qt --version ${QT_VERSION} --toolchain win64_msvc2019_64 qtbase qtdeclarative qttools qtscript"
+ENV QTDIR64=C:\\Qt\\${QT_VERSION}\\msvc2019_64
 
-RUN bash -c "./install-qt.sh -d /c/Qt --version ${QT_VERSION} --toolchain win32_msvc2017 qtbase qtdeclarative qttools qtscript"
-ENV QTDIR=C:\\Qt\\${QT_VERSION}\\msvc2017
+RUN bash -c "./install-qt.sh -d /c/Qt --version ${QT_VERSION} --toolchain win32_msvc2019 qtbase qtdeclarative qttools qtscript"
+ENV QTDIR=C:\\Qt\\${QT_VERSION}\\msvc2019
 
 RUN qbs setup-toolchains --detect && \
     qbs setup-qt %QTDIR64%/bin/qmake.exe qt64 && \
